master feat( UiInputDropdown.styles.scss ): fixed z-index for options

--- a/src/shared/components/UiInputDropdown/UiInputDropdown.styles.scss
+++ b/src/shared/components/UiInputDropdown/UiInputDropdown.styles.scss
@@ -19,6 +19,7 @@
   top: calc(100% + 4px);
   border-radius: 8px;
   left: 0;
+  z-index: 2;
   width: 100%;
   max-height: 230px;
   overflow-y: scroll;
